--- a/index.html
+++ b/index.html
@@ -1,82 +1,124 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- link to css -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>The benefits of SEO in the workplace</title>
-</head>
+  </head>
 
-<body>
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+  <body>
+    <!-- page header -->
+    <header class="header">
+      <h1>Hori<span class="seo">seo</span>n</h1>
+      <div>
+        <ul>
+          <li>
+            <!-- link to seo section -->
+            <a href="#search-engine-optimization">Search Engine Optimization</a>
+          </li>
+          <li>
+            <!-- link to online reo mgmt section -->
+            <a href="#online-reputation-management"
+              >Online Reputation Management</a
+            >
+          </li>
+          <li>
+            <!-- link to social media marketing section -->
+            <a href="#social-media-marketing">Social Media Marketing</a>
+          </li>
+        </ul>
+      </div>
+    </header>
     <div class="hero"></div>
-    <div class="content">
-        <div id="search-engine-optimization" class="content-item">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="A notebook on a desk showing multiple features of search engine Optimization" class="float-left" />
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
-        </div>
-        <div id="online-reputation-management" class="content-item">
-            <img src="./assets/images/online-reputation-management.jpg" alt="A laptop on a desk with a graphic showing the reputation of the business trending upwards" class="float-right" />
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
-        </div>
-        <div id="social-media-marketing" class="content-item">
-            <img src="./assets/images/social-media-marketing.jpg" alt="An overhead view of a table full of people sharing various ideas pertaining to social media" class="float-left" />
-            <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
-        </div>
-    </div>
-    <aside class="benefits">
-        <div class="benefit">
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="A gear inside a funnel leading to a dollar sign" />
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
-        </div>
-        <div class="benefit">
-            <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="A person with a lightbulb for a head" />
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
-        </div>
-        <div class="benefit">
-            <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="A gear with three dollar signs infront of it" />
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
-        </div>
-    </aside>
-    <div class="footer">
-        <h3>Made with ❤️️ by Horiseon</h3>
+    <!-- beginning of main body element -->
+    <!-- declaring a class of content that sets rules for each individual div inside -->
+    <main class="content">
+      <div id="search-engine-optimization" class="content-item">
+        <img
+          src="./assets/images/search-engine-optimization.jpg"
+          alt="A notebook on a desk showing multiple features of search engine Optimization"
+          class="float-left"
+        />
+        <h2>Search Engine Optimization</h2>
         <p>
-            &copy; 2024 Horiseon Social Solution Services, Inc.
+          The dominance of mobile internet use means that users are searching
+          for the right business as they travel, shop, or sit on their couch at
+          home. Search Engine Optimization (SEO) allows you to increase your
+          visibility and find the right customers for your business.
         </p>
-    </div>
-</body>
-
+      </div>
+      <div id="online-reputation-management" class="content-item">
+        <img
+          src="./assets/images/online-reputation-management.jpg"
+          alt="A laptop on a desk with a graphic showing the reputation of the business trending upwards"
+          class="float-right"
+        />
+        <h2>Online Reputation Management</h2>
+        <p>
+          The web is full of opinions, and some of these can be negative. Social
+          media allows anyone with an internet connection to say whatever they
+          want about your business. Online Reputation Management gives you the
+          control over what potential customers see when they search for your
+          business.
+        </p>
+      </div>
+      <div id="social-media-marketing" class="content-item">
+        <img
+          src="./assets/images/social-media-marketing.jpg"
+          alt="An overhead view of a table full of people sharing various ideas pertaining to social media"
+          class="float-left"
+        />
+        <h2>Social Media Marketing</h2>
+        <p>
+          Social media continues to have a sizable influence on buying habits.
+          Social media marketing helps you determine which platforms are suited
+          to your brand, using analytics to find the right markets and increase
+          your lead generation.
+        </p>
+      </div>
+      <!-- end of main body -->
+    </main>
+    <!-- aside element -->
+    <aside class="benefits">
+      <div class="benefit">
+        <h3>Lead Generation</h3>
+        <img
+          src="./assets/images/lead-generation.png"
+          alt="A gear inside a funnel leading to a dollar sign"
+        />
+        <p>
+          Inbound strategies for lead generation require less work for your
+          business, bringing customers directly to your website.
+        </p>
+      </div>
+      <div class="benefit">
+        <h3>Brand Awareness</h3>
+        <img
+          src="./assets/images/brand-awareness.png"
+          alt="A person with a lightbulb for a head"
+        />
+        <p>
+          Users find your business through paid and organic searches, increasing
+          the search ranking and visibility for your business.
+        </p>
+      </div>
+      <div class="benefit">
+        <h3>Cost Management</h3>
+        <img
+          src="./assets/images/cost-management.png"
+          alt="A gear with three dollar signs infront of it"
+        />
+        <p>
+          As the search ranking for your business increases, your advertising
+          costs decrease, and you no longer need to advertise your page.
+        </p>
+      </div>
+    </aside>
+    <!-- footer -->
+    <footer class="footer">
+      <h3>Made with ❤️️ by Horiseon</h3>
+      <p>&copy; 2024 Horiseon Social Solution Services, Inc.</p>
+    </footer>
+  </body>
 </html>
